fix: nowrap text in button

--- a/src/assets/scss/pages/promo/adaptive/_header.scss
+++ b/src/assets/scss/pages/promo/adaptive/_header.scss
@@ -84,6 +84,8 @@
   .header__button {
     margin-top: 113px;
     padding: 13px 57px;
+
+    white-space: nowrap;
   }
 
   .header__item:not(:last-child) {
